corract some word

--- a/translations/ar.csv
+++ b/translations/ar.csv
@@ -1,9 +1,9 @@
 `${0} ${1} already exists.`,`${0} ${1} موجودة من قبل.`
 `${0} ${1} is linked with existing records.`,`${0} ${1} مرطبت بسجل موجود.`
-`${0} already exists.`,`$ {0} موجود بالفعل.`
+`${0} already exists.`,`${0} موجود بالفعل.`
 `${0} filters applied`,`${0} تم تطبيق الفيلتر`
 `* required fields`,`* الحقول المطلوبة`
-`1 filter applied`,`تم تطبيق مرشح واحد`
+`1 filter applied`,`تم تطبيق فلتر واحد`
 `Accepted Quantity`,`الكمية المقبولة`
 `Account`,`الحساب`
 `Account Entries`,`إدخالات الحساب`
@@ -22,7 +22,7 @@
 `Add Row`,`إضافة صف`
 `Add Suppliers`,`إضافة الموردين`
 `Add Taxes`,`إضافة ضرائب`
-`Add a filter`,`إضافة عامل تصفية`
+`Add a filter`,`إضافة تصفية`
 `Address`,`العنوان`
 `Address Display`,`عرض العنوان`
 `Address Line 1`,`سطر العنوان 1`
@@ -33,12 +33,12 @@
 `Allocated Amount`,`المبلغ المخصص`
 `Amount`,`المبلغ`
 `Amount (Company Currency)`,`المبلغ (عملة الشركة)`
-`Amount: ${0} and writeoff: ${1} is less than the total amount allocated to references: ${2}.`,`المبلغ: $ {0} والشطب: $ {1} أقل من إجمالي المبلغ المخصص للمراجع: $ {2} .`
-`Amount: ${0} is less than the total amount allocated to references: ${1}.`,`المبلغ: $ {0} أقل من إجمالي المبلغ المخصص للمراجع: $ {1} `
+`Amount: ${0} and writeoff: ${1} is less than the total amount allocated to references: ${2}.`,`المبلغ: ${0} والشطب: $ {1} أقل من إجمالي المبلغ المخصص للمراجع: $ {2} .`
+`Amount: ${0} is less than the total amount allocated to references: ${1}.`,`المبلغ: ${0} أقل من إجمالي المبلغ المخصص للمراجع: $ {1} `
 `An error occurred.`,`حدث خطأ`
 `Application of Funds (Assets)`,`تطبيق الأموال (الأصول)`
-`Are you sure you want to cancel ${0} ${1}?`,`هل أنت متأكد أنك تريد إلغاء $ {0} $ {1}؟ `
-`Are you sure you want to delete ${0} ${1}?`,`هل أنت متأكد أنك تريد حذف $ {0} $ {1}؟ `
+`Are you sure you want to cancel ${0} ${1}?`,`هل أنت متأكد أنك تريد إلغاء ${0} $ {1}؟ `
+`Are you sure you want to delete ${0} ${1}?`,`هل أنت متأكد أنك تريد حذف ${0} $ {1}؟ `
 `Are you sure you want to submit this Bill?`,`هل أنت متأكد أنك تريد تقديم مشروع القانون هذا؟`
 `Are you sure you want to submit this Invoice?`,`هل أنت متأكد أنك تريد إرسال هذه الفاتورة؟`
 `Are you sure you want to submit this Journal Entry?`,`هل أنت متأكد أنك تريد إرسال إدخال دفتر اليومية هذا؟`
@@ -50,17 +50,17 @@
 `Bank Accounts`,`حسابات بنكية`
 `Bank Name`,`اسم البنك`
 `Bank Overdraft Account`,`حساب مصرفي السحب على المكشوف`
-`Bill`,`بيل`
-`Bill Created`,`مشروع قانون`
-`Bill No`,`بيل لا`
+`Bill`,`الفاتورة`
+`Bill Created`,`الفاتورة أنشأت`
+`Bill No`,`رقم الفاتورة `
 `Bills`,`الفواتير`
 `Bills Settings`,`إعدادات الفواتير`
 `Black`,`أسود`
 `Body`,`الجسم`
 `Both`,`كلاهما`
 `Buildings`,`المباني`
-`CSV`,`CSV`
-`Can't open database file: ${0}. Please create a new file.`,`لا يمكن فتح ملف قاعدة البيانات: $ {0}. الرجاء إنشاء ملف جديد`
+`CSV`
+`Can't open database file: ${0}. Please create a new file.`,`لا يمكن فتح ملف قاعدة البيانات: ${0}. الرجاء إنشاء ملف جديد`
 `Cancel`,`إلغاء`
 `Cancelled`,`ملغاة`
 `Capital Equipments`,`معدات رأس المال`
@@ -78,8 +78,8 @@
 `Clearance Date`,`تاريخ التخليص`
 `Click to create`,`انقر للإنشاء`
 `Close`,`إغلاق`
-`Closing (Cr)`,` إغلاق (كر) `
-`Closing (Dr)`,`إغلاق (دكتور)`
+`Closing (Cr)`,`(Cr) إغلاق`
+`Closing (Dr)`,`(Dr) إغلاق`
 `Color`,`اللون`
 `Commission on Sales`,`عمولة على المبيعات`
 `Common`,`عام`
@@ -93,11 +93,11 @@
 `Confirm Password`,`تأكيد كلمة المرور`
 `Contains`,`يحتوي`
 `Cost of Goods Sold`,`تكلفة البضائع المباعة`
-`Could not import ${0} ${1}.`,`تعذر استيراد $ {0} $ {1} .`
+`Could not import ${0} ${1}.`,`تعذر استيراد ${0} $ {1} .`
 `Could not select file.`,`تعذر تحديد الملف.`
 `Country`,`البلد`
 `Create`,`إنشاء`
-`Create Bill`,`إنشاء مشروع قانون`
+`Create Bill`,`إنشاء فاتورة`
 `Create Invoice`,`إنشاء فاتورة`
 `Create a new file and store it in your computer.`,`إنشاء ملف جديد وتخزينه في جهاز الكمبيوتر الخاص بك.`
 `Create a new file or select an existing one from your computer`,`أنشئ ملفًا جديدًا أو حدد ملفًا موجودًا من جهاز الكمبيوتر الخاص بك`
@@ -108,7 +108,7 @@
 `Current`,`الحالي`
 `Current Assets`,`الأصول الحالية`
 `Current Liabilities`,`الخصوم المتداولة`
-`Custom Hex`,`سداسي عشري مخصص`
+`Custom Hex`
 `Customer`,`الزبون`
 `Customer Created`,`خلق العميل`
 `Customer Currency`,`عملة العميل`
@@ -135,7 +135,7 @@
 `Display Precision should have a value between 0 and 9.`,`دقة العرض يجب أن تكون لها قيمة بين 0 و 9.`
 `Dividends Paid`,`توزيعات أرباح مدفوعة`
 `Document ${0} ${1} has been modified after loading`,`المستند ${0} ${1} تم تعديل المستند بعد تحميله`
-`Document type ${0} is not submittable`,`نوع المستند $ {0} غير قابل للإرسال`
+`Document type ${0} is not submittable`,`نوع المستند ${0} غير قابل للإرسال`
 `Documentation`,`التوثيق`
 `Does Not Contain`,`لا يحتوي`
 `Download Update`,`تنزيل التحديث`
@@ -171,7 +171,7 @@
 `File Path`,`مسار الملف`
 `File Size`,`حجم الملف`
 `File selection failed.`,`فشل اختيار الملف`
-`Filter`,`عامل التصفية`
+`Filter`, التصفية`
 `Fiscal Year End Date`,`تاريخ نهاية السنة المالية`
 `Fiscal Year Start Date`,`تاريخ بدء السنة المالية`
 `Fixed Assets`,`الأصول الثابتة`
@@ -179,34 +179,34 @@
 `For`,`من أجل`
 `Fraction`,`كسر`
 `Fraction Units`,`وحدات الكسر`
-`Freight and Forwarding Charges`,`مصاريف الشحن والشحن`
+`Freight and Forwarding Charges`,`مصاريف الشحن`
 `From`,`من`
 `From Account`,`من الحساب`
 `From Date`,`من تاريخ`
-`Fulfillment`,`وفاء`
+`Fulfillment`,`الاستيفاء`
 `Fulfillment Settings`,`إعدادات الاستيفاء`
 `Full Name`,`الاسم الكامل`
 `Furnitures and Fixtures`,`الأثاث والتجهيزات`
 `GST Registration`,`التسجيل في ضريبة السلع والخدمات`
-`GSTIN`,`رقم GSTIN`
-`GSTIN No.`,`رقم GSTIN`
-`GSTIN of Supplier`,`GSTIN الخاص بالمورد`
-`GSTR 3B`,`GSTR 3B`
-`GSTR 3B Report`,`تقرير GSTR 3B`
-`GSTR1`,`GSTR1`
-`GSTR2`,`GSTR2`
+`GSTIN`
+`GSTIN No.`
+`GSTIN of Supplier`
+`GSTR 3B`
+`GSTR 3B Report`
+`GSTR1`
+`GSTR2`
 `Gain/Loss on Asset Disposal`,`الربح / الخسارة من التصرف في الأصول`
 `Gender`,`الجنس`
 `General`,`عام`
-`General Ledger`,`دفتر الأستاذ العام`
+`General Ledger`
 `Get Started`,`ابدأ`
 `Grand Total`,`المجموع الكلي`
 `Grand Total (Company Currency)`,`المجموع الكلي (عملة الشركة)`
 `Greater Than`,`أكبر من`
-`HSN/SAC`,`HSN / SAC`
-`Hex Value`,`قيمة سداسية عشرية`
+`HSN/SAC`
+`Hex Value`
 `Hide & Auto Report Errors`,`إخفاء & الإبلاغ التلقائي عن الأخطاء`
-`Hide Get Started`,`إخفاء البدء`
+`Hide Get Started`,`إخفاء قائمة البدء`
 `Hides the Get Started section from the sidebar. Change will be visible on restart or refreshing the app.`,`يخفي قسم البدء من الشريط الجانبي. سيكون التغيير مرئيًا عند إعادة التشغيل أو تحديث التطبيق`
 `How to Use Data Import?`,`كيفية استخدام استيراد البيانات؟`
 `I can't find my language.`,`لا أجد لغتي`
@@ -236,8 +236,8 @@
 `Invoice Setup`,`إعداد الفاتورة`
 `Invoice Value`,`قيمة الفاتورة`
 `Invoices`,`الفواتير`
-`Is`,`هل`
-`Is Customer`,`هل العميل`
+`Is`,`هو`
+`Is Customer`,`هو العميل`
 `Is Empty`,`فارغ`
 `Is Group`,`هي المجموعة`
 `Is Not`,`ليس`
@@ -247,7 +247,7 @@
 `Item Created`,`تم إنشاء العنصر`
 `Item Name`,`اسم العنصر`
 `Items`,`العناصر`
-`JSON`,`JSON`
+`JSON`
 `JSON Data`,`بيانات JSON`
 `Journal Entry`,`إدخال دفتر اليومية`
 `Journal Entry Setting`,`إعداد إدخال دفتر اليومية`
@@ -295,18 +295,18 @@
 `Office Rent`,`إيجار مكتب`
 `Onboarding Complete`,`اكتمال الإعداد`
 `Open Folder`,`فتح مجلد`
-`Opening (Cr)`,`الافتتاح (كر) `
-`Opening (Dr)`,`افتتاح (د) `
+`Opening (Cr)`,`(Cr) الافتتاح`
+`Opening (Dr)`,`(Dr) افتتاح`
 `Opening Balance Equity`,`الرصيد الافتتاحي حقوق الملكية`
 `Opening Balances`,`أرصدة الافتتاح`
 `Organisation`,`التنظيم`
 `Outflow`,`التدفق`
 `Outstanding Amount`,`المبلغ المستحق`
-`PDF`,`PDF`
-`Pad Zeros`,`وسادة الأصفار`
+`PDF`
+`Pad Zeros`
 `Paid`,`مدفوع`
 `Parent`,`الوالد`
-`Parent Account`,`حساب الوالدين`
+`Parent Account`,`الحساب الوالد`
 `Party`,`حفلة`
 `Password`,`كلمة المرور`
 `Pay`,`دفع`
@@ -319,11 +319,11 @@
 `Payment Reference`,`مرجع الدفع`
 `Payment Settings`,`إعدادات الدفع`
 `Payment Type`,`نوع الدفع`
-`Payment amount cannot be ${0}.`,`لا يمكن أن يكون مبلغ الدفعة {0} دولارًا`
+`Payment amount cannot be ${0}.`,`لا يمكن أن يكون مبلغ الدفعة ${0}`
 `Payment amount cannot be less than zero.`,`مبلغ الدفعة لا يمكن أن يكون أقل من الصفر.`
-`Payment amount cannot exceed ${0}.`,`مبلغ الدفعة لا يمكن أن يتجاوز $ {0} .`
-`Payment amount: ${0} should be greater than 0.`,`مبلغ الدفعة: {0} دولار أمريكي يجب أن يكون أكبر من 0.`
-`Payment amount: ${0} should be less than Outstanding amount: ${1}.`,`مبلغ الدفعة: {0} دولار أمريكي يجب أن يكون أقل من المبلغ المستحق: {1} دولار أمريكي`
+`Payment amount cannot exceed ${0}.`,`مبلغ الدفعة لا يمكن أن يتجاوز ${0} .`
+`Payment amount: ${0} should be greater than 0.`,`مبلغ الدفعة: ${0} يجب أن يكون أكبر من 0.`
+`Payment amount: ${0} should be less than Outstanding amount: ${1}.`,`مبلغ الدفعة: ${0} يجب أن يكون أقل من المبلغ المستحق: ${1}`
 `Payments`,`المدفوعات`
 `Payroll Payable`,`الرواتب المستحقة الدفع`
 `Periodicity`,`الدورية`
@@ -332,7 +332,7 @@
 `Place of Supply`,`مكان التوريد`
 `Place of supply`,`مكان التوريد`
 `Plants and Machineries`,`المصانع والآليات`
-`Please assign the following fields ${0}`,`الرجاء تخصيص الحقول التالية $ {0} `
+`Please assign the following fields ${0}`,`الرجاء تخصيص الحقول التالية ${0} `
 `Please fill all values`,`الرجاء ملء جميع القيم`
 `Please select a file with data to import.`,`الرجاء تحديد ملف به بيانات للاستيراد.`
 `Please select an existing database or create a new one.`,`الرجاء تحديد قاعدة بيانات موجودة أو إنشاء قاعدة جديدة.`
@@ -346,7 +346,7 @@
 `Print Format`,`تنسيق الطباعة`
 `Print PDF`,`طباعة PDF`
 `Print Settings`,`إعدادات الطباعة`
-`Print and Stationery`,`طباعة وقرطاسية`
+`Print and Stationery`,`طباعة و المكتبة`
 `Profit And Loss`,`الربح والخسارة`
 `Profit and Loss`,`الربح والخسارة`
 `Purchase`,`شراء`
@@ -360,11 +360,11 @@
 `PurchaseReceipt`,`استلام الشراء`
 `Purchases`,`المشتريات`
 `Quantity`,`الكمية`
-`Quantity (${0}) cannot be less than zero.`,`لا يمكن أن تكون الكمية ($ {0}) أقل من صفر.`
+`Quantity (${0}) cannot be less than zero.`,`لا يمكن أن تكون الكمية (${0}) أقل من صفر.`
 `Quotation`,`الاقتباس`
 `Quotation Settings`,`إعدادات الاقتباس`
 `Rate`,`معدل`
-`Rate (${0}) cannot be less zero.`,`لا يمكن أن يكون `السعر ($ {0}) أقل من صفر.`
+`Rate (${0}) cannot be less zero.`,`لا يمكن أن يكون `السعر (${0}) أقل من صفر.`
 `Rate (Company Currency)`,`السعر (عملة الشركة)`
 `Rate can't be negative.`,`لا يمكن أن يكون المعدل سالبًا`
 `Re-Open`,`إعادة فتح`
@@ -388,10 +388,10 @@
 `Reports`,`التقارير`
 `Required Fields not Assigned`,`الحقول المطلوبة غير معيَّنة`
 `Reset`,`إعادة`
-`Reset Filters`,`إعادة تعيين عوامل التصفية`
+`Reset Filters`,`إعادة تعيين التصفية`
 `Retained Earnings`,`الأرباح المحتجزة`
 `Reverse Charge`,`الشحن العكسي`
-`Reverse Chrg.`,`عكس Chrg.`
+`Reverse Chrg.`,``الشحن العكسي`
 `Reverted`,`تم إرجاعه`
 `Review Accounts`,`مراجعة الحسابات`
 `Role`,`الدور`
@@ -414,8 +414,8 @@
 `Save & Close`,`حفظ وإغلاق`
 `Save Template`,`حفظ النموذج`
 `Save as PDF`,`حفظ كملف PDF`
-`Save as PDF Successful`,`حفظ كملف PDF ناجح`
-`Saving...`,`إنقاذ ...`
+`Save as PDF Successful`,`PDF حفظ كملف ناجح`
+`Saving...`,`حفظ ...`
 `Schedule`,`الجدول`
 `Secured Loans`,`قروض مضمونة`
 `Securities and Deposits`,`الأوراق المالية والودائع`
@@ -469,7 +469,7 @@
 `Submit on Import`,`إرسال عند الاستيراد`
 `Submitted`,`مقدم`
 `Subtotal`,`المجموع الفرعي`
-`Successfully created the following ${0} entries:`,`تم بنجاح إنشاء إدخالات $ {0} التالية:`
+`Successfully created the following ${0} entries:`,`تم بنجاح إنشاء إدخالات ${0} التالية:`
 `Supplier`,`المورد`
 `Supplier Created`,`إنشاء المورد`
 `Supplier Currency`,`عملة المورد`
@@ -491,16 +491,16 @@
 `Temporary Accounts`,`حسابات مؤقتة`
 `Temporary Opening`,`الافتتاح المؤقت`
 `Terms`,`الشروط`
-`The following ${0} entries were created: ${1}`,`تم إنشاء إدخالات $ {0} التالية: $ {1}`
+`The following ${0} entries were created: ${1}`,`تم إنشاء إدخالات ${0} التالية: $ {1}`
 `Theme Color`,`لون الموضوع`
 `This action is permanent`,`هذا العمل دائم`
-`This action is permanent and will cancel the following payment: ${0}`,`هذا الإجراء نهائي وسيؤدي إلى إلغاء الدفعة التالية: $ {0}`
-`This action is permanent and will cancel the following payments: ${0}`,`هذا الإجراء نهائي وسيؤدي إلى إلغاء الدفعات التالية: $ {0} `
+`This action is permanent and will cancel the following payment: ${0}`,`هذا الإجراء نهائي وسيؤدي إلى إلغاء الدفعة التالية: ${0}`
+`This action is permanent and will cancel the following payments: ${0}`,`هذا الإجراء نهائي وسيؤدي إلى إلغاء الدفعات التالية: ${0} `
 `Title`,`العنوان`
 `To`,`إلى`
 `To Account`,`الحساب`
 `To Date`,`حتى الآن`
-`To Do`,`To Do`
+`To Do`
 `Top Expenses`,`أهم المصروفات`
 `Total Spending`,`إجمالي الإنفاق`
 `Total Tax`,`إجمالي الضرائب`
@@ -517,9 +517,9 @@
 `Username`,`اسم المستخدم`
 `Utility Expenses`,`نفقات المرافق`
 `Value`,`القيمة`
-`Value missing for ${0}`,`القيمة مفقودة لـ $ {0}`
+`Value missing for ${0}`,`القيمة مفقودة لـ ${0}`
 `Verify Imported Data`,`التحقق من البيانات المستوردة`
-`Version ${0} available`,`الإصدار $ {0} متاح`
+`Version ${0} available`,`الإصدار ${0} متاح`
 `View Bills`,`عرض الفواتير`
 `View Invoices`,`عرض الفواتير`
 `Welcome to Frappe Books`,`مرحبًا بكم في Frappe Books`
