fix: get listview to render

--- a/translations/ar.csv
+++ b/translations/ar.csv
@@ -445,7 +445,7 @@
 `Setup Complete`,`اكتمل الإعداد`
 `Setup Wizard`,`معالج الإعداد`
 `Setup your organization`,`إعداد منظمتك`
-`Setup your workspace`,`إعداد مساحة العمل الخاصة بك`
+`Setup Your Workspace`,`إعداد مساحة العمل الخاصة بك`
 `Show Me`,`أرني`
 `Smallest Currency Fraction Value`,`أصغر قيمة لكسر العملة`
 `Softwares`,`البرامج`
