--- a/translations/ca-ES.csv
+++ b/translations/ca-ES.csv
@@ -491,7 +491,7 @@
 `Setup your opening balances before performing any accounting entries`,`Configureu els saldos d'obertura abans de realitzar qualsevol entrada comptable`
 `Setup your organization`,`Configura la teva empresa`
 `Setup your tax templates for your sales or purchase transactions`,`Configura les plantilles de taxes per a les vendes o compres`
-`Setup your workspace`,`Configura el teu espai de treball`
+`Setup Your Workspace`,`Configura el teu espai de treball`
 `Show Me`,`Mostra'm`
 `Smallest Currency Fraction Value`,`Valor de fracció de la divisa més petit`
 `Softwares`,`Programari`
