--- a/translations/de.csv
+++ b/translations/de.csv
@@ -397,7 +397,7 @@
 `Setup Complete`,`Einrichtung abgeschlossen`
 `Setup Wizard`,`Einrichtungsassistent`
 `Setup your organization`,`Einrichtung Ihrer Organisation`
-`Setup your workspace`,`Einrichten Ihres Arbeitsbereichs`
+`Setup Your Workspace`,`Einrichten Ihres Arbeitsbereichs`
 `Smallest Currency Fraction Value`,`Kleinster Wert eines Währungsbruchteils`
 `Softwares`,`Software`
 `Something has gone terribly wrong. Please check the console and raise an issue.`,`Etwas ist furchtbar schief gelaufen. Bitte prüfen Sie die Konsole und melden Sie ein Problem.`
