--- a/translations/fr.csv
+++ b/translations/fr.csv
@@ -397,7 +397,7 @@
 `Setup Complete`,`Configuration terminée`
 `Setup Wizard`,`Assistant de configuration`
 `Setup your organization`,`Configurer votre organisation`
-`Setup your workspace`,`Configurez votre espace de travail`
+`Setup Your Workspace`,`Configurez votre espace de travail`
 `Smallest Currency Fraction Value`,`Valeur de la plus petite fraction de la monnaie`
 `Softwares`,`Logiciels`
 `Something has gone terribly wrong. Please check the console and raise an issue.`,`Quelque chose s'est terriblement mal passé. Veuillez vérifier la console et soulever un problème.`
