--- a/translations/pt.csv
+++ b/translations/pt.csv
@@ -397,7 +397,7 @@
 `Setup Complete`,`Configuração Completa`
 `Setup Wizard`,`Assistente de Configuração`
 `Setup your organization`,`Configure a sua organização`
-`Setup your workspace`,`Configure o seu espaço de trabalho`
+`Setup Your Workspace`,`Configure o seu espaço de trabalho`
 `Smallest Currency Fraction Value`,`Menor valor de fracção da moeda`
 `Softwares`,`Aplicações informáticas`
 `Something has gone terribly wrong. Please check the console and raise an issue.`,`Algo correu terrivelmente mal. Por favor, verifique a consola e levante um problema.`
