incr: search improvements - get form to render - minor ui fixes

--- a/translations/ar.csv
+++ b/translations/ar.csv
@@ -415,7 +415,7 @@
 `Save Template`,`حفظ النموذج`
 `Save as PDF`,`حفظ كملف PDF`
 `Save as PDF Successful`,`PDF حفظ كملف ناجح`
-`Saving...`,`حفظ ...`
+`Saving`,`حفظ`
 `Schedule`,`الجدول`
 `Secured Loans`,`قروض مضمونة`
 `Securities and Deposits`,`الأوراق المالية والودائع`
