--- a/translations/ca-ES.csv
+++ b/translations/ca-ES.csv
@@ -452,7 +452,7 @@
 `Save Template`,`Guardar plantilla`
 `Save as PDF`,`Guardar com a PDF`
 `Save as PDF Successful`,`Guardat com a PDF correctament`
-`Saving...`,`Guardant...`
+`Saving`,`Guardant`
 `Schedule`,`Programar`
 `Search...`,`Search...`
 `Secured Loans`,`Préstecs `
