--- a/translations/de.csv
+++ b/translations/de.csv
@@ -374,7 +374,7 @@
 `Save & Close`,`Speichern & Schließen`
 `Save as PDF`,`Als PDF speichern`
 `Save as PDF Successful`,`PDF gespeichert`
-`Saving...`,`Speichern...`
+`Saving`,`Speichern`
 `Schedule`,`Zeitplan`
 `Secured Loans`,`Gesicherte Darlehen`
 `Securities and Deposits`,`Wertpapiere und Einlagen`
