--- a/translations/fr.csv
+++ b/translations/fr.csv
@@ -374,7 +374,7 @@
 `Save & Close`,`Enregistrer et fermer`
 `Save as PDF`,`Enregistrer en PDF`
 `Save as PDF Successful`,`Enregistrer en PDF avec succès`
-`Saving...`,`Sauver...`
+`Saving`,`Sauver`
 `Schedule`,`Programme`
 `Secured Loans`,`Prêts garantis`
 `Securities and Deposits`,`Titres et dépôts`
