--- a/translations/pt.csv
+++ b/translations/pt.csv
@@ -374,7 +374,7 @@
 `Save & Close`,`Guardar e Fechar`
 `Save as PDF`,`Guardar como PDF`
 `Save as PDF Successful`,`Guardar como PDF Bem sucedido`
-`Saving...`,`Salvar...`
+`Saving`,`Salvar`
 `Schedule`,`Horário`
 `Secured Loans`,`Empréstimos Garantidos`
 `Securities and Deposits`,`Títulos e Depósitos`
